# kosync

./: .gitignore  README.md  docker-compose.yml  kosync.db
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.yml  openapi.json  pyproject.toml
backend/kosync_backend/: app.py  auth.py  client_generator.py  config.py  database.py  epub.py  main.py  schemas.py  user_middleware.py
backend/kosync_backend/routes/: auth.py  base.py  books.py  download.py  sync.py
backend/kosync_backend/templates/: base.html  dashboard.html  ebook_detail.html  ebook_edit.html  index.html  login.html  profile_edit.html  signup.html
backend/kosync_backend/templates/components/: header.html
backend/tests/: conftest.py  test_client_generation.py  test_sync.py  test_upload_books.py  test_upload_limits.py
backend/tests/e2e/: test_e2e.py
backend/tests/resources/: nickeldbus_KoboRoot.tgz
client/: .gitignore  config.go  config_test.go  deploy.py  go.mod  go.sum  main.go  nickel.go  sync.go  sync_test.go
frontend/: .gitignore  Dockerfile  README.md  package.json  tsconfig.json
frontend/app/: .dockerignore  README.md  index.html  package-lock.json  package.json  tailwind.config.cjs  vite.config.ts
frontend/app/src/: App.tsx  index.css
frontend/landing-page/: README.md  package-lock.json  package.json  tailwind.config.mjs
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: BookDetailsDialog.tsx  BookUploadForm.tsx  ClientInstallSection.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/lib/: config.ts  (+1 more)
infra/: nginx.conf
(+27 files in other folders)
